# game-from-scratch

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.md  makefile
docs/: CONVENTIONS.md  TODO.md
engine/: CMakeLists.txt
engine/include/engine/input/: Gamepad.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp
engine/include/engine/math/: operations.hpp  operations.inl
engine/include/engine/math/matrix/: Matrix2.hpp  Matrix2.inl  Matrix3.inl  Matrix4.hpp  Matrix4.inl
engine/include/engine/math/quat/: Quaternion.hpp  Quaternion.inl
engine/include/engine/math/vector/: Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
engine/src/input/: Input.cpp
game/: CMakeLists.txt
game/assets/: config.json
game/src/: main.cpp
src/: main.cpp
src/engine/input/: gamepad.hpp  input.cpp  input.hpp  keyboard.hpp  mouse.hpp
src/engine/math/: vector2.hpp  vector2.inl
src/engine/math/matrix/: matrix2.hpp  matrix2.inl  matrix3.hpp  matrix3.inl  matrix4.hpp  matrix4.inl
src/engine/math/quat/: quaternion.hpp  quaternion.inl
src/engine/math/vector/: vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
tools/assetparser/: CMakeLists.txt  makefile
tools/assetparser/src/: ArgumentParser.cpp  ArgumentParser.hpp  AssetParserManager.cpp  AssetParserManager.hpp  BinaryWrite.hpp  Color.hpp  main.cpp
tools/assetparser/src/parsers/: BaseParser.hpp  ImageParser.cpp  ImageParser.hpp  ShaderParser.cpp  ShaderParser.hpp
